# MARV

./: Cargo.toml  Embed.toml  README.md  memory.x  rustypi.uf2
.cargo/: config.toml
docs/: PINOUT.md  architecture.md  coms.md  hardware.md  impl.md  method.md  sd_dma_architecture.md  solved.md
fc/: main.rs  mcp2515_driver.rs
fc/drivers/: bmi088.rs  bmm350.rs  bmp388.rs  bus_managers.rs  dps310.rs  icm20948.rs  lis3mdl.rs  mod.rs  ms5611.rs  pcf8563.rs  sensor_trait.rs  ublox_neom9n.rs
fc/middleware/: bmi088_api.rs  buzzer_api.rs  dps310_api.rs  gps_api.rs  lis3mdl_api.rs  ms5611_api.rs  rgb_led_api.rs  rv8803_api.rs  sd_api.rs
fc/tools/: i2cscanner.rs  mod.rs
gs/: main.rs
radio/: main.rs  mcp2515_driver.rs
src/: hardware.rs  main.rs
src/drivers/: bmi088.rs  buzzer.rs  gps.rs  icm20948.rs  lis3mdl.rs  mod.rs  ms5611.rs  rgb_led.rs  rv8803.rs  sd.rs  sensor_trait.rs  soft_spi.rs
src/middleware/: bmi088_api.rs  icm20948_api.rs  mcp2515_api.rs  mod.rs  ms5611_api.rs
src/scripts/: i2c_scanner.rs  mod.rs
src/sensors/: bmp388.rs  gps.rs  i2c_sensor_manager.rs  mod.rs  pcf8563.rs  sensor_manager.rs
src/tools/: i2cscanner.rs  mod.rs
