[package]
name = "rustypico"
version = "0.1.0"
edition = "2021"
authors = ["Luis Martinez<lmx154>"]
description = "A Rust embedded project for Raspberry Pi Pico 2 (RP2350)"
license = "MIT"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded", "rp2350", "pico2", "raspberry-pi"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
nb = "1.1.0"
panic-halt = "0.2.0"
heapless = "0.8.0"
rp235x-hal = { version = "0.3.0", features = ["binary-info", "critical-section-impl", "rt"] }
rtic = { version = "2.1.1", features = ["thumbv8main-backend"] }

[profile.dev]
debug = 2
lto = false
opt-level = "s"

[profile.release]
debug = 2
lto = true
opt-level = "z"

[[bin]]
name = "FC"
path = "fc/main.rs"
test = false
bench = false

[[bin]]
name = "radio"
path = "radio/main.rs"
test = false
bench = false