[package]
name = "rustypico"
version = "0.1.0"
edition = "2021"
authors = ["Luis Martinez<lmx154>"]
description = "A Rust embedded project for Raspberry Pi Pico 2 (RP2350)"
license = "MIT"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded", "rp2350", "pico2", "raspberry-pi"]

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
nb = "1.1.0"
defmt = "0.3"
defmt-rtt = "0.4.0"
panic-halt = "0.2.0"
heapless = "0.8"
rp235x-hal = { version = "0.3.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"] }

[features]
default = ["bmi088"]
bmi088 = []

[profile.dev]
debug = 2
lto = false
opt-level = "s"

[profile.release]
debug = 2
lto = true
opt-level = "z"

[[bin]]
name = "rustypico"
test = false
bench = false